--- a/DD/main.tex
+++ b/DD/main.tex
@@ -153,23 +153,41 @@ Moreover, both the \textit{Application Layer} and the \textit{Presentation Layer
 
 
 \begin{itemize}
-    \item \textbf{Data Controller}: 
-    This is the component that is responsible to show data to Third-Party who requires them.
+    \item \textbf{User Session Controller}: This is the component that handles all the logic related to the login and
+registration functionality of the system. This module allows to do the authentication of the user through the submitted
+credentials for the login process and for the registration of a new user.
+
+    \item \textbf{Notification Controller}:
+    This component permits to send messages between Presentation and business logic layer, in both directions.
     
-    \item \textbf{Sos Controller}: This component allows both individual and Third-Party to enable the Sos service. In particular, it allows Individual to chose a Third-Party among the ones that have enabled the Sos service.
-    
-    \item \textbf{Dispatcher Controller}: This component is active ted by an alert from the Sos service. It exploits the Dispatcher's API to select an ambulance from the database and send it the GPS position of the Individual in danger.
+    \item \textbf{Profile Controller}:
+    This is the component that handles the modification of profile data by the user
     
     \item \textbf{Request Controller}:
     This component allows to generate individual and group requests and has the responsibility to send the former to individuals. Furthermore it checks the validity of group requests.
     
-    \item \textbf{User Session Controller}: This is the component that handles all the logic related to the login and
-registration functionality of the system. This module allows to do the authentication of the user through the submitted
-credentials for the login process and for the registration of a new user.
+
+
+    \item \textbf{Requested Data Controller}: 
+    This is the component that is responsible to show data to Third-Party who requires them. Furthermore it allows to subscribe to new data.
+    
+    \item \textbf{External Device Controller}: This is the component that handles the connection of individuals' external devices and is able to acquire data from them.
+    
+    \item \textbf{Automated-Sos Controller}: This component allows both individual and Third-Party to enable the Sos service. In particular, it allows Individual to chose a Third-Party among the ones that have enabled the Sos service.
+    
+    \item \textbf{Position Controller}: This is the controller that allows the application to retrieve the user's GPS position data and send it to the dispatcher
+    
+    \item \textbf{Dispatcher Controller}: This component is active ted by an alert from the Sos service. It exploits the Dispatcher's API to select an ambulance from the database and send it the GPS position of the Individual in danger.
+    
+
+    
+    
+
     
     \item \textbf{Run Controller}: This component handles the creation of a run. Beside, it permits Individuals to enroll adn watch run.
 
-    
+     \item \textbf{Map Controller}: This component allows organizers to view an interactive map on which they can define a path. In addition, it communicates with Position Controller in order to get Athletes positions and show them on a map to spectators.
+     
 \end{itemize}
 
 
